# multigo_navigation_ai_integrated

./: .gitignore  .gitmodules  CLAUDE.md  README.md  multigo.repos  rosbag_record_all.bash
.claude/: WORKFLOW.md  task-7-specification-review.md
.claude/hooks/: post-summary.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  feature_request.md  reverse_engineering.md  task.md
.github/workflows/: claude-code-review.yml  claude.yml
docs/: Both_way_comparison.md  Both_way_comparison_jp.md  CLAUDE.md  INDEX.md  README.md
docs/active/: Conluence_and_AI_REQUIREMENTS_COMPARISON_EN.md  Conluence_and_AI_REQUIREMENTS_COMPARISON_JP.md  HARDWARE_CONFIGURATIONS_COMPARISON.md  HARDWARE_SELECTION_ANALYSIS.md  HARDWARE_SELECTION_ANALYSIS_JA.md  IMPLEMENTATION-GUIDE.md  IMPLEMENTATION-GUIDE_ja.md  ISSUES-AND-FIXES.md  ISSUES-AND-FIXES_ja.md  OUTDOOR_FEATURE_EXPANSION.md  OUTDOOR_FEATURE_EXPANSION_JA.md  OUTDOOR_PHYSICAL_ENVIRONMENT_QUESTIONNAIRE.md  OUTDOOR_PHYSICAL_ENVIRONMENT_QUESTIONNAIRE_JP.md  OUTDOOR_USAGE_ANALYSIS.md  QUICK-SETUP.md  QUICK-SETUP_ja.md  REQUIREMENTS-TRACEABILITY.md  REQUIREMENTS-TRACEABILITY_JP.md  REQUIREMENTS.md  REQUIREMENTS_JP.md  START-HERE.md  START-HERE_ja.md  SWERVE_DRIVE_SYSTEM_TASK.md  SWERVE_DRIVE_SYSTEM_TASK_JA.md  SYSTEM-ARCHITECTURE.md  SYSTEM-ARCHITECTURE_ja.md  swerve_drive_task.md
docs/active/outdoor_swerve_system/: CLAUDE.md  COMPLETE_TESTING_PLAN_WITH_TIMELINE_JA.md  DOCUMENTATION_EVALUATION_AND_GAPS.md  DOCUMENTATION_EVALUATION_AND_GAPS_JA.md  DOCUMENTATION_GAPS_SUMMARY.md  DOCUMENTATION_GAPS_SUMMARY_JA.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SCOPE_REVISION_APPROVAL.md  DOCUMENT_REFERENCE_GUIDE.md  DOCUMENT_REFERENCE_GUIDE_JA.md  FINAL_SUMMARY_FOR_SENIOR_APPROVAL.md  PRIVACY_LEGAL_REVIEW_PACKAGE_FOR_LI_SAN.md  PROJECT_COMPREHENSIVE_SUMMARY.md  PROJECT_TIMELINE_WITH_AI.md  PROJECT_TIMELINE_WITH_AI_JA.md  README.md
docs/active/outdoor_swerve_system_current/: COMPLETE_TESTING_PLAN_WITH_TIMELINE.md  DOCUMENTATION_INDEX_JA.md  PROJECT_TIMELINE_WITH_AI_EN_BACKUP.md  PROJECT_TIMELINE_WITH_AI_JA.md  PROJECT_TIMELINE_WITH_AI_OLD.md  TEAM_STRUCTURE.md
docs/archive/: 02-DEVELOPER-GUIDE-ARCHITECTURE.md  03-REQUIREMENTS-DOCUMENT.md  ARCHITECTURE-REVIEW-AND-PROPOSED-IMPROVEMENTS.md  ARCHITECTURE-REVIEW-SUMMARY.md  IDENTIFIED-ISSUES-AND-GAPS.md  ISSUES-QUICK-SUMMARY.md  README-ARCHITECTURE-REVIEW.md  README-DOCUMENTATION.md
docs/claude_code_analysis/: ANALYSIS_SUMMARY.md  CLAUDE_CODE_INTEGRATION.md  GITHUB_ACTIONS_CLAUDE_SETUP_GUIDE.md  INDEX.md  README_DOCS.md  REPOSITORY_UPDATE_NOTES.md  VERIFICATION_NOTES.md  WORKFLOW_FIX_NOTES.md  discussion-history.md
docs/claude_code_analysis/complete-system-analysis/: COMPARISON_BEFORE_AFTER.md  README.md  complete-architecture.md  integration-guide.md  requirements-complete-jp.md  requirements-complete.md
docs/claude_code_analysis/docking-system-analysis/: architecture-overview.md  code-analysis.md  questions-and-gaps.md  quick-reference.md  requirements-docking-jp.md  requirements-docking.md  test-coverage-analysis.md
docs/claude_code_analysis/overall-system-analysis/: quick-reference.md  requirements-overall-jp.md  requirements-overall.md
docs/multigo/: DOCS_FOLDER_ANALYSIS_AND_CLEANUP_RECOMMENDATIONS.md  FINAL_SUMMARY_FOR_SENIOR_APPROVAL.md  PRIVACY_LEGAL_REVIEW_PACKAGE_FOR_LI_SAN.md  README.md
docs/multigo-ja/: DOCS_FOLDER_ANALYSIS_AND_CLEANUP_RECOMMENDATIONS_ja.md  FINAL_SUMMARY_FOR_SENIOR_APPROVAL_ja.md  PRIVACY_LEGAL_REVIEW_PACKAGE_FOR_LI_SAN_ja.md  README_ja.md
docs/multigo-ja/pankaj_vehicle_software/: README_ja.md
docs/multigo-ja/shared/: README_ja.md  TEAM_SCOPE_DEFINITION_ja.md
docs/multigo-ja/tsuchiya_kiril_hardware/: HARDWARE_REQUIREMENTS_FOR_TSUCHIYA_ja.md  README_ja.md
docs/multigo-ja/unno_tvm_server/: README_ja.md  TVM_API_IMPLEMENTATION_GUIDE_FOR_UNNO_ja.md
docs/reference/: 01-SYSTEM-OVERVIEW-USER-GUIDE.md  04-GETTING-STARTED-GUIDE.md  CEA_PRESENTATION_LAYMAN_GUIDE.md  CEA_PRESENTATION_TECHNICAL_ARCHITECTURE.md
models/multigo/: model.sdf  multigo.urdf
models/wheelchair/: model.config  model.sdf
scripts/: parse-coverage.sh  verify-automation.sh
src/aruco_detect/: CMakeLists.txt  package.xml
src/aruco_detect/include/aruco_detect/: aruco_detect.h
src/aruco_detect/launch/: aruco_detect.launch.py
src/aruco_detect/scripts/: marker_gen.py
src/aruco_detect/src/: aruco_detect.cpp
src/boot/: CMakeLists.txt  package.xml
src/boot/config/: docking_pid_params.yaml  ego_filter.yaml  nav2_params.yaml  pointcloud_to_laserscan.yaml  rtabmap_params_list(for-debugging).yaml
src/boot/launch/: aruco_detect.launch.py  boot.launch.py  filter_lidar.launch.py  multigo_simulation_launch.py  nav_docking.launch.py  navigation_launch.py  run.launch.py  simulation.launch.py
src/boot/maps/: rtabmap.db
src/boot/models/multigo/: model.config  model.sdf  multigo.urdf
src/boot/models/wheelchair/meshes/: Marker20.dae  Marker21.dae  Marker25.dae
src/boot/rviz/: nav2_default_view.rviz
src/camera_publisher/: CMakeLists.txt  package.xml
src/camera_publisher/config/: CamCalibration.py  calib.pckl  calib.yaml
src/camera_publisher/src/: publisher_from_video.cpp
src/ego_pcl_filter/: CMakeLists.txt  package.xml
src/laserscan_to_pcl/: CMakeLists.txt  package.xml
src/laserscan_to_pcl/include/: laserscan_to_pcl.hpp
src/laserscan_to_pcl/src/: laserscan_to_pcl.cpp
src/mecanum_wheels/: package.xml  setup.cfg  setup.py
src/nav_control/: CMakeLists.txt  package.xml
src/nav_control/config/: docking_pid_params.yaml
src/nav_control/include/nav_control/: nav_control.h
src/nav_control/launch/: nav_control.launch.py
src/nav_control/src/: nav_control.cpp
src/nav_docking/: CMakeLists.txt  package.xml
src/nav_docking/config/: docking_pid_params.yaml
src/nav_docking/include/nav_docking/: nav_docking.h
src/nav_docking/launch/: nav_docking.launch.py
src/nav_docking/src/: nav_docking.cpp
src/nav_goal/: CMakeLists.txt  package.xml
src/nav_goal/src/: nav_goal.cpp
src/pcl_merge/: CMakeLists.txt  package.xml
(+240 files in other folders)
