<?xml version="1.0"?>
<package format="3">
  <name>boot</name>
  <version>0.0.0</version>
  <description>boot file for Multigo</description>
  <maintainer email="thomas.vines.gc@futu-re.co.jp">thomas.vines</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export the build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
