<?xml version="1.0"?>
<package format="3">
  <name>nav_docking</name>
  <version>0.0.0</version>
  <description>Aruco marker detection using OpenCV and ROS 2</description>
  <maintainer email="thomas.vines.gc@futu-re.co.jp">thomas.vines</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>  <!-- Added cv_bridge dependency -->
  <depend>opencv</depend>  <!-- Added OpenCV dependency -->

  <depend>nav_interface</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export the build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
